--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Embedded Iframe</h1>
-    <iframe src="http://20.91.195.244:3000/d-solo/ddxrsw1l4pbswc/mms-routers?orgId=1&refresh=5s&from=1726821919060&to=1726843519061&panelId=1" width="450" height="200" frameborder="0"></iframe>
+    <iframe src="http://localhost:3000/public-dashboards/28856f9d77c94774bdb87066cee44b18" frameborder="0"></iframe>
 </body>
 </html>
 
