--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Embedded Iframe</h1>
-    <iframe src="http://localhost:3000/public-dashboards/28856f9d77c94774bdb87066cee44b18" frameborder="0"></iframe>
+    <iframe src="http://20.91.195.244:3000/public-dashboards/28856f9d77c94774bdb87066cee44b18" frameborder="0"></iframe>
 </body>
 </html>
 
